<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <group
        android:id="@+id/action_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_filter_book"
            android:title="@string/title"
            app:showAsAction="ifRoom"
            android:checked="true" />
        <item
            android:id="@+id/menu_filter_author"
            android:title="@string/author"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_filter_publisher"
            android:title="@string/publisher"
            app:showAsAction="ifRoom" />
    </group>

</menu>