<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="@dimen/book_cover_width"
            android:layout_height="@dimen/book_cover_height"
            android:layout_marginRight="10dp"
            android:background="@drawable/thumbnail"
            android:contentDescription="@string/book_cover" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <org.melayjaire.boimela.view.BanglaTextView
                android:id="@+id/title"
                android:layout_width="@dimen/book_title_width"
                android:layout_height="wrap_content"
                app:font="@string/font_solaimanlipi"
                app:banglaText="@string/title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <org.melayjaire.boimela.view.BanglaTextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:font="@string/font_solaimanlipi"
                app:banglaText="@string/author" />

            <org.melayjaire.boimela.view.BanglaTextView
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:font="@string/font_solaimanlipi"
                app:banglaText="@string/publisher" />

            <org.melayjaire.boimela.view.BanglaTextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:font="@string/font_solaimanlipi"
                app:banglaText="@string/price" />
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/favorite"
        style="@style/Widget.CompoundButton.Star.Custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true" />

</RelativeLayout>