<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="org.melayjaire.boimela.ui.BookDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/imageView_book_cover"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/book_cover" />

        <org.melayjaire.boimela.view.BanglaTextView
            android:id="@+id/textView_author"
            android:layout_below="@id/imageView_book_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:minWidth="72dp"
            android:layout_margin="8dp"
            android:textSize="16sp"
            app:font="@string/font_solaimanlipi"
            app:banglaText="@string/author" />

        <TextView
            android:id="@+id/textView_author_name"
            android:layout_below="@id/imageView_book_cover"
            android:layout_toRightOf="@id/textView_author"
            android:layout_toEndOf="@id/textView_author"
            android:layout_alignBaseline="@id/textView_author"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/author" />

        <org.melayjaire.boimela.view.BanglaTextView
            android:id="@+id/textView_publisher"
            android:layout_below="@id/textView_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:minWidth="72dp"
            android:layout_margin="8dp"
            android:textSize="16sp"
            app:font="@string/font_solaimanlipi"
            app:banglaText="@string/publisher" />

        <TextView
            android:id="@+id/textView_publisher_name"
            android:layout_below="@id/textView_author"
            android:layout_toRightOf="@id/textView_publisher"
            android:layout_toEndOf="@id/textView_publisher"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/publisher" />

        <org.melayjaire.boimela.view.BanglaTextView
            android:id="@+id/textView_price"
            android:layout_below="@id/textView_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:minWidth="72dp"
            android:layout_margin="8dp"
            android:textSize="16sp"
            app:font="@string/font_solaimanlipi"
            app:banglaText="@string/price" />

        <TextView
            android:id="@+id/textView_price_value"
            android:layout_below="@id/textView_publisher"
            android:layout_toRightOf="@id/textView_price"
            android:layout_toEndOf="@id/textView_price"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/price" />
    </RelativeLayout>

</ScrollView>
